// Original file: proto/user.proto

import type { UserResponse as _userPackage_UserResponse, UserResponse__Output as _userPackage_UserResponse__Output } from '../userPackage/UserResponse';

export interface UsersResponse {
  'users'?: (_userPackage_UserResponse)[];
}

export interface UsersResponse__Output {
  'users'?: (_userPackage_UserResponse__Output)[];
}
